test/bad/set-local.fnl
(local x 1)
(set x 3)
